--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ img{
 	margin:0 auto;
 	margin-bottom:60px;
 	width: 70%;
+	max-width: 700px;
 }
 
 h1{
@@ -52,8 +53,8 @@ pre{
 	height:auto;
 
 	margin-top: 50px;
-	margin-left:15%;
-	margin-right:15%;
+	margin-left:5%;
+	margin-right:5%;
 
 
 	padding:20px;
