--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-	margin-left:20px;
-	margin-right:20px;
+	margin-left:5%;
+	margin-right:5%;
 	font-family:arial;
 }
 
@@ -57,7 +57,7 @@ pre{
 	margin-right:5%;
 
 
-	padding:20px;
+	padding:5%;
 	border-radius: 50px;
 
 	
