--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ pre{
 	height:auto;
 
 	margin-top: 50px;
-	margin-left:5%;
-	margin-right:5%;
+	margin-left:0;
+	margin-right:0;
 
 
 	padding:5%;
