--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@ pre{
 	padding:30px;
 }
 
+.centr{
+	margin:0 auto;
+	text-align:center;
+	display:block;
+}
+
 .alink{
 	margin:10px;
 	margin-top:20px;
@@ -71,21 +77,9 @@ pre{
 	display:inline-block;
 
 	font-size:1.5em;
-
-
 }
 
 
-.altext{
-	font-size:2em;
-	color:#f5c2e7;
-	display:inline;
-	background-color:#1b1611;
-	padding:15px 30px;
-	text-decoration:none;
-	margin-top:20px;
-	margin-bottom:20px;
-}
 
 .basic{
 	width:auto;
