--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@ a{
 	margin:10px;
 	margin-top:20px;
 	margin-left:5%;
-	margin-right:5%;
-	width:90%;
+	margin-right:50px;
+	width:80%;
 
 	background-color:#403930;
 	border-radius:10px;
