--- a/style.css
+++ b/style.css
@@ -52,7 +52,9 @@ li{
 pre{
 	font-size:1.5em;
 	color:#b2a493;
-	margin:3%;
+	margin-left:3%;
+	margin-right:3%;
+	margin-bottom:80px;
 	font-family:monospace;
 	background-color:#1b1611;
 	border-radius:30px;
@@ -115,6 +117,7 @@ a{
 	margin-top: 50px;
 	margin-left:0;
 	margin-right:0;
+	margin-bottom:200px;
 
 
 	padding:5%;
@@ -124,4 +127,9 @@ a{
 	display:block;
 
 	background-color:#2e271e;
+}
+
+.hi{
+	color:#f9e2af;
+	margin: 0px;
 }
