--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body{
 	background-color:#1b1611;
+	margin:0px;
 }
 
 img{
@@ -115,8 +116,8 @@ a{
 	height:auto;
 
 	margin-top: 50px;
-	margin-left:0;
-	margin-right:0;
+	margin-left:0px;
+	margin-right:0px;
 	margin-bottom:200px;
 
 
